Reduce the jar size, make it executable and fix textures not loading